--- a/style.css
+++ b/style.css
@@ -18,12 +18,14 @@
   width: 100vw;
   height: 7rem;
   text-align: center;
+  z-index: 5;
 }
 
 
 .floating-pic img{
   display: inline-block;
-  height: 7rem;
-  width: 7rem;
-  z-index: 5;
+  height: 10rem;
+  width: 10rem;
+
+  border-radius: 50%;
 }
