--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .banner-bg {
   display: block;
-  width: 100vw;
+  width: 100%;
   height: 14rem;
   background-color: #BFDB58;
   clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 79%);
@@ -37,13 +37,33 @@
   border-radius: 50%;
 }
 
+h1 {
+  font-size: 2.5rem;
+}
+
+
+#bio {
+  font-weight: 900;
+  max-width: 800px;
+  display: block;
+  text-align: center;
+  margin: 24px auto;
+  padding: 8px;
+  background-color: #BFDB58;
+  border-radius: 3px;
+}
+
+#bio p {
+  font-size: 1.2rem;
+}
+
+
 .content-container {
-  display: inline-block;
-  height: 300px; /*test*/
-  width: 100vw;
+  display: block;
   background-color: #77A1DC;
   padding: 0 2rem;
   padding-top: 86px;
+  padding-bottom: 20px;
 }
 
 .block-container {
@@ -55,6 +75,7 @@
   display: inline-block;
   display:  110px;
 }
+
 
 .banner-img {
   display: inline-block;
